--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
-/* Your CSS Code here. */
+.Accio{
+	width: 150px;
+	height: 150px;
+	background: black;
+	
+}
+
+.hello-accio-job{
+	color: white;
+	left: 32px;
+	padding: 10px;
+}
